tests/ui/max-align.nightly.stderr
error[E0589]: invalid `repr(align)` attribute: larger than 2^29
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/max-align.rs:96:17
   |
96 | #[repr(C, align(1073741824))]
   |                 ^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0589`.
